# MallocWordCLI

./: .gitignore  CMakeLists.txt  README.md
include/: CollecteResource.h  collectRessource.h  collecteResource.h  fight.h  include.h  inits.h  level.h  map.h  menu.h  monster.h  movement.h  perlin_gen.h  pnjService.h  save.h  usefulFunc.h
save/: savePlayer.txt
src/: CollecteResource.c  PnjCraft.c  PnjFix.c  PnjService.c  PnjStockage.c  collectRessource.c  fight.c  inits.c  level.c  main.c  map.c  map.h  menu.c  monster.c  movement.c  perlin_gen.c  save.c  usefulFunc.c
